Data access added

--- a/IssueTracker.Issues.Application/IssueTracker.Issues.Application.csproj
+++ b/IssueTracker.Issues.Application/IssueTracker.Issues.Application.csproj
@@ -13,7 +13,7 @@
     <ItemGroup>
       <Folder Include="CommandHandlers\Validators" />
       <Folder Include="EventHandlers" />
-      <Folder Include="QueriesResults" />
+      <Folder Include="Queries\Validators" />
     </ItemGroup>
 
 </Project>
