--- a/IssueTracker.Framework/IssueTracker.Framework.csproj
+++ b/IssueTracker.Framework/IssueTracker.Framework.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="FluentValidation" Version="8.4.0" />
       <PackageReference Include="MediatR" Version="7.0.0" />
       <PackageReference Include="MediatR.Extensions.Autofac.DependencyInjection" Version="3.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="2.2.6" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
     </ItemGroup>
 
