--- a/IssueTracker.Infrastructure.Data/IssueTracker.Infrastructure.Data.csproj
+++ b/IssueTracker.Infrastructure.Data/IssueTracker.Infrastructure.Data.csproj
@@ -6,7 +6,9 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.1" />
       <PackageReference Include="Npgsql.Json.NET" Version="4.0.10" />
     </ItemGroup>
 
