--- a/IssueTracker.Contexts.Issues.Application/IssueTracker.Contexts.Issues.Application.csproj
+++ b/IssueTracker.Contexts.Issues.Application/IssueTracker.Contexts.Issues.Application.csproj
@@ -6,8 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\IssueTracker.Contexts.Issues.Domain\IssueTracker.Contexts.Issues.Domain.csproj" />
       <ProjectReference Include="..\IssueTracker.Framework\IssueTracker.Framework.csproj" />
-      <ProjectReference Include="..\IssueTracker.Issues.Domain\IssueTracker.Issues.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
