--- a/IssueTracker.Contexts.Issues.Domain/IssueTracker.Contexts.Issues.Domain.csproj
+++ b/IssueTracker.Contexts.Issues.Domain/IssueTracker.Contexts.Issues.Domain.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
+        <RootNamespace>IssueTracker.Issues.Domain</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
