--- a/IssueTracker.Contexts.Issues.WebApi/IssueTracker.Contexts.Issues.WebApi.csproj
+++ b/IssueTracker.Contexts.Issues.WebApi/IssueTracker.Contexts.Issues.WebApi.csproj
@@ -3,8 +3,9 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
     </PropertyGroup>
-    
+
     <ItemGroup>
+      <ProjectReference Include="..\IssueTracker.Contexts.Issues.Application\IssueTracker.Contexts.Issues.Application.csproj" />
       <ProjectReference Include="..\IssueTracker.Framework.WebApi\IssueTracker.Framework.WebApi.csproj" />
     </ItemGroup>
 
