--- a/IssueTracker.Contexts.Members.WebApi/IssueTracker.Contexts.Members.WebApi.csproj
+++ b/IssueTracker.Contexts.Members.WebApi/IssueTracker.Contexts.Members.WebApi.csproj
@@ -2,11 +2,11 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
+        <RootNamespace>IssueTracker.Users.WebApi</RootNamespace>
     </PropertyGroup>
-
+    
     <ItemGroup>
       <ProjectReference Include="..\IssueTracker.Framework.WebApi\IssueTracker.Framework.WebApi.csproj" />
-      <ProjectReference Include="..\IssueTracker.Issues.Application\IssueTracker.Issues.Application.csproj" />
     </ItemGroup>
 
 </Project>
